<resources>
    <string name="app_name">LayoutPackages</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigate_song">Монологи о рыбалке Плейлист</string>
    <string name="start_songs_time">0:00</string>
    <string name="end_songs_time">4:20</string>
    <string name="song_name">На заре</string>
    <string name="status_play">Сейчас играет</string>
    <string name="facebook_text">Facebook</string>
    <string name="calculator_text">Калькулятор</string>
    <string name="telegramm_text">Телеграмм</string>
    <string name="audio_player_text">Плеер</string>
    <string name="user_name_text">Александр Пушкин</string>
    <string name="status_user_text">online</string>
    <string name="phone_number_text">+7 (936) 123-45-87</string>
    <string name="help_phone_text">Tap to change phone number</string>
    <string name="nickname_text">EvgeshaOG</string>
    <string name="help_nickname_text">Username</string>
    <string name="quote_text">Какая нибудь цитата</string>
    <string name="bio_text">Bio</string>
    <string name="settings_text">Settings</string>
    <string name="notifications_and_sounds_text">Notifications and Sounds</string>
    <string name="privacy_and_security_text">Privacy and Security</string>
    <string name="data_and_storage_text">Data and Storage</string>
    <string name="chat_settings_text">Chat Settings</string>
    <string name="chat_folders_text">Chat Folders</string>
    <string name="devices_text">Devices</string>
    <string name="linear_layout_text">Linear Layout</string>
    <string name="constraint_layout_text">Constraint Layout</string>
    <string name="artist_song_text">Альянс</string>
    <string name="calculate_numbers_text">789+56</string>
    <string name="result_calculate_numbers_text">845</string>
    <string name="module_text">( )</string>
    <string name="percent_text">%</string>
    <string name="split_text">÷</string>
    <string name="seven_number_text">7</string>
    <string name="eight_number_text">8</string>
    <string name="nine_number_text">9</string>
    <string name="multiply_text">×</string>
    <string name="four_number_text">4</string>
    <string name="five_number_text">5</string>
    <string name="six_number_text">6</string>
    <string name="decrement_text">-</string>
    <string name="one_number_text">1</string>
    <string name="two_number_text">2</string>
    <string name="three_number_text">3</string>
    <string name="increment_text">+</string>
    <string name="plus_minus_text">+/-</string>
    <string name="zero_number_text">0</string>
    <string name="format_double_text">,</string>
    <string name="equal_text">=</string>
    <string name="login_info_text">Телефон или электронный адрес</string>
    <string name="password_info_text">Пароль</string>
    <string name="text_for_button_login">Войти</string>
    <string name="password_forget_text_info">Забыли пароль?</string>
    <string name="account_text">Account</string>
</resources>