<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".layout.linear.Calculator">

    <TextView
        android:id="@+id/calculate_numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/calculate_numbers_text"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/calculate_numbers_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:text="@string/result_calculate_numbers_text"
        android:textColor="#9e9e9e"
        android:textSize="26sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/timer_button"
                android:layout_width="25dp"
                android:layout_marginStart="16dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_baseline_access_time_grey" />

            <ImageView
                android:id="@+id/bar_chart_button"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="32dp"
                android:src="@drawable/ic_baseline_bar_chart" />

            <ImageView
                android:id="@+id/functions_button"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="32dp"
                android:src="@drawable/ic_baseline_functions_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/delete_numbers_button"
                android:layout_width="25dp"
                android:layout_marginEnd="16dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_baseline_backspace_24" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/dark_grey" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:columnCount="4">

        <Button
            android:id="@+id/delete_one_button"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/round_button_grey"
            android:text="C"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:textSize="34sp" />

        <Button
            android:id="@+id/module_button"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/round_button_grey"
            android:text="@string/module_text"
            android:textAllCaps="false"
            android:textColor="@color/green"
            android:textSize="34sp" />

        <Button
            android:id="@+id/percent_button"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/round_button_grey"
            android:text="@string/percent_text"
            android:textAllCaps="false"
            android:textColor="@color/green"
            android:textSize="34sp" />

        <Button
            android:id="@+id/split_button"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/round_button_grey"
            android:text="@string/split_text"
            android:textAllCaps="false"
            android:textColor="@color/green"
            android:textSize="34sp" />

        <Button
            android:id="@+id/seven_button"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/round_button_grey"
            android:text="@string/seven_number_text"
            android:textAllCaps="false"
            android:textColor="#4c4c4c"
            android:textSize="34sp" />

        <Button
            android:id="@+id/eight_button"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/round_button_grey"
            android:text="@string/eight_number_text"
            android:textAllCaps="false"
            android:textColor="#4c4c4c"
            android:textSize="34sp" />

        <Button
            android:id="@+id/nine_button"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/round_button_grey"
            android:text="@string/nine_number_text"
            android:textAllCaps="false"
            android:textColor="#4c4c4c"
            android:textSize="34sp" />

        <Button
            android:id="@+id/multiply_button"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/round_button_grey"
            android:text="@string/multiply_text"
            android:textAllCaps="false"
            android:textColor="@color/green"
            android:textSize="34sp" />

        <Button
            android:id="@+id/four_button"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/round_button_grey"
            android:text="@string/four_number_text"
            android:textAllCaps="false"
            android:textColor="#4c4c4c"
            android:textSize="34sp" />

        <Button
            android:id="@+id/five_button"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/round_button_grey"
            android:text="@string/five_number_text"
            android:textAllCaps="false"
            android:textColor="#4c4c4c"
            android:textSize="34sp" />

        <Button
            android:id="@+id/six_button"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/round_button_grey"
            android:text="@string/six_number_text"
            android:textAllCaps="false"
            android:textColor="#4c4c4c"
            android:textSize="34sp" />

        <Button
            android:id="@+id/decrement_button"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_button_grey"
            android:text="@string/decrement_text"
            android:textAllCaps="false"
            android:textColor="@color/green"
            android:textSize="34sp" />

        <Button
            android:id="@+id/one_button"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/round_button_grey"
            android:text="@string/one_number_text"
            android:textAllCaps="false"
            android:textColor="#4c4c4c"
            android:textSize="34sp" />

        <Button
            android:id="@+id/two_button"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/round_button_grey"
            android:text="@string/two_number_text"
            android:textAllCaps="false"
            android:textColor="#4c4c4c"
            android:textSize="34sp" />

        <Button
            android:id="@+id/three_button"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/round_button_grey"
            android:text="@string/three_number_text"
            android:textAllCaps="false"
            android:textColor="#4c4c4c"
            android:textSize="34sp" />

        <Button
            android:id="@+id/increment_button"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/round_button_grey"
            android:text="@string/increment_text"
            android:textAllCaps="false"
            android:textColor="@color/green"
            android:textSize="34sp" />

        <Button
            android:id="@+id/number_status_button"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/round_button_grey"
            android:text="@string/plus_minus_text"
            android:textAllCaps="false"
            android:textColor="#4c4c4c"
            android:textSize="34sp" />

        <Button
            android:id="@+id/zero_button"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/round_button_grey"
            android:text="@string/zero_number_text"
            android:textAllCaps="false"
            android:textColor="#4c4c4c"
            android:textSize="34sp" />

        <Button
            android:id="@+id/set_double_number_button"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/round_button_grey"
            android:text="@string/format_double_text"
            android:textAllCaps="false"
            android:textColor="#4c4c4c"
            android:textSize="34sp" />

        <Button
            android:id="@+id/equal_button"
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/round_button_green"
            android:text="@string/equal_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="34sp" />
    </GridLayout>
</LinearLayout>