<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".layout.linear.Facebook">

    <ImageView
        android:layout_marginTop="32dp"
        android:layout_gravity="center"
        android:id="@+id/image_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/facebook_blue_logo" />

    <com.google.android.material.textfield.TextInputEditText
        android:layout_gravity="center"
        android:id="@+id/tv_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_info_text"
        android:theme="@style/Theme.App.Base" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tv_password"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/password_info_text"
        android:theme="@style/Theme.App.Base" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#1779f5"
        android:text="@string/text_for_button_login"
        android:textAllCaps="false"
        android:textColor="#86bdf8"
        android:layout_gravity="center"
        android:textSize="20sp" />

    <TextView
        android:layout_width="80dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password_forget_text_info"
        android:textColor="#3a7ab2"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>