<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_menu"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".layout.linear.SecondMenuFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/previous_menu"
            android:layout_width="48dp"
            android:background="@drawable/custom_menu_button"
            android:layout_height="48dp"
            android:src="?attr/homeAsUpIndicator"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/mainView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/linear_layout_text"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <ImageButton
            android:id="@+id/next_menu"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/custom_menu_button"
            android:rotation="180"
            android:src="?attr/homeAsUpIndicator"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/authorization_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_menu_button"
            android:text="@string/facebook_text"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/player_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_menu_button"
            android:text="@string/audio_player_text"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/profile_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_menu_button"
            android:text="@string/telegramm_text"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/calculator_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_menu_button"
            android:text="@string/calculator_text"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>