<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_audio_player"
    android:orientation="vertical"
    tools:context=".layout.linear.AudioPlayer">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/side_menu_1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_keyboard_arrow_down"
            tools:ignore="SpeakableTextPresentCheck" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/song_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/status_play"
                android:textColor="#a9bcb6"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/playlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/navigate_song"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/share_sound"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_baseline_airplay_24"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/open_menu"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_baseline_menu_24"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <ImageView
        android:id="@+id/image_of_song"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:src="@drawable/wallpaper_alliance" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:gravity="end"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/song_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/song_name"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/artist_of_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artist_song_text"
                android:textColor="#a9bcb6"
                android:textSize="18sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/share_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_baseline_share" />

        <ImageView
            android:id="@+id/side_menu_2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_more_vert" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:theme="@style/SeekBarColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/first_seconds"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start_songs_time"
            android:textColor="#a9bcb6"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/last_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_songs_time"
            android:textColor="#a9bcb6"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/unFavourite_btn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_baseline_favorite"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/previous_song_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:src="@android:drawable/ic_media_previous" />

        <ImageView
            android:id="@+id/play_button"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_baseline_play"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/next_song_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:src="@android:drawable/ic_media_next" />

        <ImageView
            android:id="@+id/favourite_btn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_baseline_favorite_on"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="48dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/repeat"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_repeat_24" />

        <ImageView
            android:id="@+id/quality"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_high_quality_24" />

        <ImageView
            android:id="@+id/timer"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_timer_24" />

        <ImageView
            android:id="@+id/shuffle"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_shuffle_24" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>